# django-statsd

./: .coveragerc  .gitignore  .travis.yml  CODEOWNERS  MANIFEST.in  Makefile  README.rst  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup.py  test_settings.py  tox.ini
django_statsd/: __init__.py  celery.py  celery_hooks.py  middleware.py  models.py  panel.py  plugins.py  tests.py  urls.py  views.py
django_statsd/clients/: __init__.py  log.py  normal.py  nose.py  null.py  toolbar.py
django_statsd/loggers/: errors.py
django_statsd/management/commands/: statsd_ping.py
django_statsd/patches/: __init__.py  cache.py  db.py  utils.py
docs/: index.rst
requirements/: requirements.txt  requirements_test.txt
tests/: conftest.py  test_django_statsd.py
